{{rfc}}, {{checktrans}} <fight#1059623>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -1,4 +1,5 @@
-[[Image:Fight.gif|thumb|Fight ([[Karate]])]]
+{{rfc|definitions 1, 2, 3 are essentially the same}}
+ [[Image:Fight.gif|thumb|Fight ([[Karate]])]]
 ==English==
 
 {{rank|per|result|formed|763|fight|agree|sit|considerable}}
@@ -25,6 +26,7 @@
 {{bottom}}
 
 ====Translations====
+{{checktrans}}
 {{top}}
 *Danish: [[kamp]] {{c}} (2,3,4)
 *Dutch: [[gevecht]] {{n}}
