--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -36,6 +36,7 @@ From Old English [[ceosan|ċēosan]].
 *German: [[auswählen]], [[wählen]]
 {{mid}}
 *Italian: [[scegliere]], [[selezionare]]
+*Maori: [[whiri]]
 *Swedish: [[välja]]
 {{bottom}}
 
