/* Noun */ graph = geometric sense, but the map is analytical only <curve#1061835>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -15,8 +15,8 @@
 
 # A gentle [[bend]], such as in a road.
 # A figure containing no [[straight]] portions and no [[angle]]s.
-# {{geometry}} A [[one-dimensional]] figure of [[non-zero]] length.
-<!--not sure how this differs from the algebraic geometrical sense: # {{analyticgeom}}  A [[continuous map]] or its [[graph]] from a one-dimensional [[space]] to a multidimensional space.-->
+# {{analyticgeom}}  A [[continuous map]] from a one-[[dimensional]] [[space]] to a multidimensional space.
+# {{geometry}} A one-dimensional figure of [[non-zero]] length; the [[graph]] of a continuous map from a one-dimensional space.
 # {{alggeom}} An [[algebraic curve]]; a [[polynomial]] [[relation]] of the planar coordinates.
 # {{topology}} A one-dimensional [[continuum]].
 # (''informal, usually in plural'' '''curves''') The attractive shape of a woman's body.
