/* Derived terms */ +simple curve <curve#1061839>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -36,6 +36,7 @@
 *[[pedal curve]]
 *[[plane curve]]
 *[[pursuit curve]]
+*[[simple curve]]
 *[[sine curve]]
 *[[space curve]]
 *[[spherical curve]]
