/* Noun */ a curved line (?) <curve#1061847>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -14,7 +14,7 @@
 {{en-noun-reg}}
 
 # A gentle [[bend]], such as in a road.
-# A figure containing no [[straight]] portions and no [[angle]]s.
+# A simple figure containing no [[straight]] portions and no [[angle]]s; a [[curved]] [[line]].
 # {{analyticgeom}}  A [[continuous map]] from a one-[[dimensional]] [[space]] to a multidimensional space.
 # {{geometry}} A one-dimensional figure of [[non-zero]] length; the [[graph]] of a continuous map from a one-dimensional space.
 # {{alggeom}} An [[algebraic curve]]; a [[polynomial]] [[relation]] of the planar coordinates.
