--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -2,17 +2,18 @@
 
 ===Verb===
 {{en-infl-reg-consonant|suck||}}
+
 # To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
 # (''colloquial'') Term of general disparagement, indicating the subject or situation has no redeeming qualities.
 # (''colloquial'') With ''at'', indicates a particular area of deficiency.
 #: ''You're great at baseball, but you suck at golf.''
 
 ====Synonyms====
-#(2, 3 above) To [[blow]]
+*(2, 3 above) To [[blow]]
 
 ====Antonyms====
-#(1 above) To [[blow]]
-#(2, 3 above) To [[rock]], to [[rule]]
+*(1 above) To [[blow]]
+*(2, 3 above) To [[rock]], to [[rule]]
 
 ====Translations====
 '''To use the mouth to pull in liquid substances for ingestion or to perform a similar act on solid material without ingestion'''
