robot  Adding: ja, ko <pen#1066391>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -108,10 +108,12 @@
 [[de:pen]]
 [[es:pen]]
 [[fr:pen]]
+[[ko:pen]]
 [[id:pen]]
 [[it:pen]]
 [[hu:pen]]
 [[nl:pen]]
+[[ja:pen]]
 [[no:pen]]
 [[pl:pen]]
 [[fi:pen]]
