/* Transitive verb */ see also <stomach#1069563>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -48,6 +48,10 @@
 # To be able to [[tolerate]] something, either emotionally or mentally; to [[stand]] or [[handle]] something.
 #:''I really can’t '''stomach''' jobs involving that much paperwork, but some people seem to tolerate them.''
 
+===See also===
+*[[stomachable]]
+*[[unstomachable]]
+
 [[Category:1000 English basic words]]
 
 [[ang:stomach]]
