/* Translations */ <United States of America#1069565>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -45,7 +45,7 @@
 {{mid}}
 *Japanese: [[米国]] (べいこく, Béikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, Ameriká Gasshūkoku)
 *Kazakh: [[Америка Құрама Штаттары]]
-*Khmer: [[សហរដ្ឋអាេមរិក]]
+*Khmer: {{KMchar|[[សហរដ្ឋអាេមរិក]]}}
 *Kirghiz: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
 *Korean: [[미국]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk), ''South Korean:'' [[美國]], ''North Korean:'' [[米國]] (Miguk)
 *Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Unitae Americae]]
