--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -40,6 +40,12 @@
 *Telugu: [[పొట్ట]] (poTTa), [[కడుపు]] (kaDupu)
 {{bottom}}
 
+'''belly'''
+{{top}}
+{{mid}}
+*Russian: [[живот]] (živót) {{m}}
+{{bottom}}
+
 ====Related terms====
 *[[alvinolagnia]]
 
