fix headings, es++ <zenith#1078244>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -6,32 +6,33 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 
 ===Noun===
 '''zenith'''
+
 # {{astronomy}}
 #* The [[point]] in the [[celestial sphere]] opposite the [[nadir]].
 #* The point in the sky [[vertically]] above a given position or observer.
 #* The highest point in the sky reached by a [[celestial]] body.
 # Highest point or [[state]]; [[peak]].
 
-===Synonyms===
+====Synonyms====
 *[[culmination]]
 
-===Antonym===
+====Antonyms====
 *[[nadir]]
 
 ====Translations====
 {{top}}
 *Bulgarian: [[зенит]] ''m''
-*Esperanto: [[zenito]]
+*[[Esperanto]]: [[zenito]]
 *Finnish: [[huippukohta]], [[zeniitti]] (about sky)
 *French: [[zénith]] ''m''
 *German: [[Zenit]] ''m''
-*Interlingua: [[zenit]]
-*Italian: [[zenit]] ''m''
+*[[Interlingua]]: [[zenit]]
 {{mid}}
+*Italian: [[zenit]] ''m''
 *Japanese: [[絶頂]], [[頂点]]; [[天頂]] (astronomy)
 *Polish: [[zenit]] ''m'', [[apogeum]] ''n''
 *Portuguese: [[zênite]] ''m''
-*Spanish: [[cenit]] ''m''
+*Spanish: [[cenit]] ''m'', [[auge]] {{m}}
 {{bottom}}
 
 [[Category:English nouns]]
