/* Synonyms */ <New Zealand#1084148>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -57,12 +57,13 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 
 ====Synonyms====
 * [[Maoriland]]
-* [[Land of the Long White Cloud]] - ''(Australia)''
+* [[Land of the Long White Cloud]] - ''(Maori name translated into English)''
 * [[Land of the Long White Shroud]] - ''(Australia, humourous, insulting)''
 *[[Aotearoa]]
 *[[Aotearoa New Zealand]]
 *[[NZ]]
 *[[Enzed]]
+
 ====Derived terms====
 *[[New Zealander]]
 
