/* Noun */ solder bridge <bridge#1085373>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -21,7 +21,7 @@
 #(''music'') A song contained within another song, often demarcated by meter, key, or melody.
 #: ''The lyrics in the song's '''bridge''' inverted its meaning.''
 #{{chemistry}} a [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s
-
+#([[electronics]]) an unintended [[solder]] [[connection]] between two or more [[component]]s or pins.
 ====Translations====
 '''construction or natural feature that spans a divide'''
 {{top}}
