--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -78,5 +78,6 @@
 *[[w:United States of America]]
 *[[Wiktionary Appendix:Countries of the world]]
 
+[[fr:United States of America]]
 [[nl:United States of America]]
 [[sv:United States of America]]
