--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -18,7 +18,7 @@
 *Ido: [[fondar]]
 *[[Indonesian]]: [[temu]], [[temu|menemukan]], [[temu|menemui]]
 *[[Japanese]]: [[見つけた]] (みつけた, mitsuketa), [[見つかった]] ([[みつかった]], mitsukatta), [[発見]]した ([[はっけん]]した, hakken-shita)
-*{{sv}}: [[fann]], [[hittade]]
+*Swedish: [[fann]], [[hittade]]
 {{bottom}}
 
 ===Verb===
@@ -30,7 +30,7 @@
 *[[German]]: [[gefunden]] 
 *[[Indonesian]]: [[temu]], [[temu|menemukan]], [[temu|menemui]], [[temu|ditemukan]], [[temu|ditemui]]
 *[[Japanese]]: [[見つけた]] (みつけた, mitsuketa), [[見つかった]] ([[みつかった]], mitsukatta), [[発見]]した ([[はっけん]]した, hakken-shita), [[見つけられた]] (みつけられた, mitsukerareta), [[発見]]した ([[はっけん]]された, hakken-sareta)
-*{{sv}}: [[hittat]], [[funnit]]
+*Swedish: [[hittat]], [[funnit]]
 
 ===Verb===
 '''to found'''  ([[founds]], [[founded]], [[founding]])
