--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -11,15 +11,29 @@
 # A negative consequence or loss that occurs or is required to occur.
 
 ====Translations====
+;Amount of money, time, etc. (1)
 {{top}}
-*Chinese: [[费]] (fèi)
-*German: [[Kosten]] ''f pl''
-*Greek: [[κόστος]] [ˈko̞sto̞s] ''n'', [[έξοδο]] [ˈe̞k͡so̞ˌðo̞] ''n'', [[δαπάνη]] [ðaˈpani] ''f'', [[τίμημα]] [ˈtimiˌma] ''n'', [[αντίτιμο]] [aˈ(n)ditiˌmo̞] ''n''
-*Indonesian: [[biaya]], [[ongkos]]
-*Italian: [[costo]] ''m''
+*Finnish: [[hinta]], [[kustannus]]
 {{mid}}
-*Japanese: [[費用]] ([[ひよう]], hiyō)
-*Portuguese: custo
+{{bottom}}
+
+;A negative consequence or loss (2)
+{{top}}
+*Finnish: [[hinta]]
+{{mid}}
+{{bottom}}
+
+=====Translations to be categorized=====
+{{checktrans}}
+{{top}}
+*{{ttbc|Chinese}}: [[费]] (fèi)
+*{{ttbc|German}}: [[Kosten]] ''f pl''
+*{{ttbc|Greek}}: [[κόστος]] [ˈko̞sto̞s] ''n'', [[έξοδο]] [ˈe̞k͡so̞ˌðo̞] ''n'', [[δαπάνη]] [ðaˈpani] ''f'', [[τίμημα]] [ˈtimiˌma] ''n'', [[αντίτιμο]] [aˈ(n)ditiˌmo̞] ''n''
+*{{ttbc|Indonesian}}: [[biaya]], [[ongkos]]
+{{mid}}
+*{{ttbc|Italian}}: [[costo]] ''m''
+*{{ttbc|Japanese}}: [[費用]] ([[ひよう]], hiyō)
+*{{ttbc|Portuguese}}: [[custo]]
 {{bottom}}
 
 === Verb ===
@@ -30,11 +44,12 @@
 ====Translations====
 {{top}}
 *Dutch: [[kosten]]
+*Finnish: [[maksaa]]
 *German: [[kosten]]
-*Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
 *Indonesian: [[habis|menghabiskan]] biaya
 *Italian: [[costare]]
 {{mid}}
+*Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
 *Japanese: [[費やす]] ([[ついやす]], tsuiyasu)
 {{bottom}}
 
