/* Translations */ <United States of America#1091801>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -31,7 +31,7 @@
 *French: [[États-Unis d'Amérique]] ''m pl'', (''short form'') [[États-Unis]] ''m pl'', [[É-U]]
 *[[Frisian]]: [[Feriene Steaten fan Amearika]]
 *Georgian: [[ამერიკის შეერთებული შტატები]] (amerikis šeert‘ebuli štatebi)
-*German: [[Vereinigte Staaten von Amerika]] ''m pl'', (''short form'') [[Vereinigte Staaten]] ''m pl'', [[USA]] {{f}}, also ''pl''
+*German: [[Vereinigte Staaten von Amerika]] {{m}} ''pl'', (''short form'') [[Vereinigte Staaten]] {{m}} ''pl'', [[USA]] {{m}} ''pl'' or {{f}} ''singular''
 *Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] ''f pl'', [[Ηνωμένες Πολιτείες Αμερικής]] ''f pl'', (''short form'') [[Ηνωμένες Πολιτείες]] ''f pl'', [[ΗΠΑ]]
 *Gujarati: [[સંયુકત રાજ્ય અમેરિકા]]
 *Hawaiian: [['Amelika Huipū'ia]]
