robot  Adding: zh <hamstring#1092210>

--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -14,3 +14,5 @@
 '''Hamstring''' ''c''
 
 #The act of buying large supplies of something which is belived to become more expensive or more difficult to get at in the near future.
+
+[[zh:hamstring]]
