/* Translations */ <United States of America#1093417>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -35,7 +35,7 @@
 *Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] ''f pl'', [[Ηνωμένες Πολιτείες Αμερικής]] ''f pl'', (''short form'') [[Ηνωμένες Πολιτείες]] ''f pl'', [[ΗΠΑ]]
 *Gujarati: [[સંયુકત રાજ્ય અમેરિકા]]
 *Hawaiian: [['Amelika Huipū'ia]]
-*Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel Amerika), ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה"ב]] (ARH-B)
+*Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel Amerika), ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה״ב]] (ARH-B)
 *Hindi: [[संयुक्त राज्य अमरीका]] (Sa.nyukta Rājya Amrīkā), [[संयुक्त राष्ट्र अमरीका]] (Sa.nyukta Raštra Amrīkā)
 *Hungarian: [[Amerikai Egyesült Államok]]
 *Indonesia: [[Amerika Serikat]]
