--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -20,7 +20,7 @@ From the Latin [[id est]], meaning “that is”
 *Bulgarian: [[т.е.]] ([[тоест]], ''toest'')
 *French: [[c.-à-d.]]
 *German: [[d.h.]] (''[[das heißt]]'')
-*Russian: [[т.е.]] ([[то-есть]], ''tó-jest’)
+*Russian: [[т.е.]] ([[то есть]], ''tó jest’)
 *Spanish: [[es decir]]
 
 [[de:i.e.]]
