--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -88,6 +88,7 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *[[newzealending]], [[newzealander]], [[nyzealending]], [[nyzealender]]
 *[[newzealandsk]], [[nyzealandsk]]
 
+[[zh-min-nan:New Zealand]]
 [[fr:New Zealand]]
 [[io:New Zealand]]
 [[hu:New Zealand]]
