--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -239,6 +239,7 @@ Old English ''[[plega]]'', ''[[plæga]]''
 *[[playpen]]
 *[[playroom]]
 *[[playschool]]
+*[[play the field]]
 *[[plaything]]
 *[[playtime]]
 *[[play to the gallery]]
