robot  Adding: ko <坩#1102658>

--- a/en/坩/坩.13036.wikitext
+++ b/en/坩/坩.13036.wikitext
@@ -32,7 +32,9 @@
 
 ==Japanese==
 ===[[Kanji]]===
-{{kanji|on readings=[[かん]] (kan)|kun readings=[[つぼ]] (tsubo)}}
+{{kanji|on readings=[[かん]] (kan)
+|kun readings=[[つぼ]] (tsubo)
+}}
 
 * '''Other info''':  
 
@@ -65,3 +67,4 @@
 ** Decimal: 43352
 
 [[fr:坩]]
+[[ko:坩]]
