--- a/en/愼/愼.15695.wikitext
+++ b/en/愼/愼.15695.wikitext
@@ -34,7 +34,9 @@
 
 ==Japanese==
 ===[[Kanji]]===
-{{kanji|on readings=[[しん]] (shin)|kun readings=[[つつしむ]] (tsutsushimu)}}
+{{kanji|on readings=[[しん]] (shin)
+|kun readings=[[つつしむ]] (tsutsushimu)
+}}
 
 * '''Other info''':  
 
@@ -67,3 +69,4 @@
 ** Decimal: 24892
 
 [[fr:愼]]
+[[ko:愼]]
