French tr. checked <float#1115255>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -36,11 +36,13 @@
 *Dutch: [[drijven]]
 {{mid}}
 *Finnish: [[kellua]], [[pysyä]] [[pinta|pinnalla]]
+*French: [[flotter]]
 {{bottom}}
 
 '''drift gently through the air'''
 {{top}}
 *Finnish: [[leijua]]
+*French: [[flotter]]
 {{mid}}
 *Russian: [[парить]], [[плыть]]
 {{bottom}}
@@ -49,6 +51,7 @@
 {{top}}
 *Dutch: [[meedrijven]]
 *Finnish: [[lipua]]
+*French: [[flotter]]
 {{mid}}
 *Russian: [[плыть]]
 {{bottom}}
@@ -58,6 +61,7 @@
 *Dutch: [[vloeien]]
 {{mid}}
 *Finnish: [[lipua]], [[leijua]]
+*French: [[flotter]]
 {{bottom}}
 
 '''automatically adjust a parameter as related parameters change'''
@@ -69,6 +73,7 @@
 '''allow a price to be determined by the markets as opposed to by rule'''
 {{top}}
 *Finnish: [[kellua]]
+*French: [[flotter]]
 {{mid}}
 {{bottom}}
 
@@ -100,7 +105,6 @@
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
 
-*{{ttbc|French}}: [[flotter]]
 *{{ttbc|German}}: [[schwimmen]]
 *{{ttbc|Ido}}: [[flotacar]]
 *{{ttbc|Spanish}}: [[flotar]]
