--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -1,11 +1,14 @@
 ==English==
 
+===Pronunciation===
+*{{audio|en-us-coat.ogg|Audio (US)}}
+
 ===Noun===
 {{en-noun-reg}}
 
-#an [[outer]] [[garment]] [[cover]]ing the upper [[torso]] and [[arms]].
-#a [[covering]] of [[material]], such as [[paint]]
-#[[fur]] or [[feathers]] of animal
+#An [[outer]] [[garment]] [[cover]]ing the upper [[torso]] and [[arms]].
+#A [[covering]] of [[material]], such as [[paint]].
+#The [[fur]] or [[feathers]] of animal.
 ====Translations====
 '''an outer garment covering the upper torso and arms'''
 {{top}}
