--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -68,3 +68,4 @@ Often abbreviated "etc." or "&c". [[Ampersand]] ("[[&]]") comes from the Latin w
 
 [[da:et cetera]]
 [[fr:et cetera]]
+[[la:et cetera]]
