--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-Old English ''[[{{Unicode|flǣsc}}]]''; cf. [[Old_High_German|Old High German]] "''fleisk''".
+Old English ''{{Unicode|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old High German]] "''fleisk''".
 
 ===Noun===
 {{en-noun-unc}}
