--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -21,10 +21,14 @@
 # to have the command of a language.
 #:''He '''speaks''' Klingon fluently''.
 # to converse by rapid interactive computerised means; chat online
+====Noun====
+# language or jargon used in a particular environment or by a group of people. Corporate 'speak'; IT 'speak'; etc
+
 ====Synonyms====
 *[[articulate]]
 *[[talk]]
 *[[verbalize]]
+
 
 ====Related terms====
 *[[speak of the devil]]
