--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -3,14 +3,11 @@
 
 ===Pronunciation===
 *{{audio|en-us-bridge.ogg|Audio (US)}}
-
 ===Noun===
 '''bridge''' (''plural'' '''[[bridges]]''')
 
 #A [[construction]] or [[natural]] [[feature]] that [[span]]s a [[divide]].
 #: ''The rope '''bridge''' crosses the river.''
-#(''card games'') A [[card game]] played normally with four players playing as two teams of two players each.
-#: ''Bidding is an essential element of the game "'''Bridge'''".''
 #(''anatomy'') The [[upper]] [[bony]] [[ridge]] of the [[human]] [[nose]].
 #: ''Rugby players often break the '''bridge''' of their noses.''
 #(''dentistry'') A [[prosthesis]] replacing one or several adjacent [[tooth|teeth]].
@@ -25,6 +22,8 @@
 #: ''The lyrics in the song's '''bridge''' inverted its meaning.''
 #{{chemistry}} a [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s
 #([[electronics]]) an unintended [[solder]] [[connection]] between two or more [[component]]s or pins.
+====Etymology====
+Old English ''[[brycġ]]''
 ====Translations====
 '''construction or natural feature that spans a divide'''
 {{top}}
@@ -80,28 +79,6 @@
 *Vietnamese: [[cầu]]
 {{bottom}}
 
-'''card game'''
-{{top}}
-*Bosnian: [[bridž#Bosnian|bridž]] {{m}}
-*Catalan: bridge {{m}}
-*Danish: bridge
-*Dutch: bridge
-*French: bridge {{m}}
-*Hungarian: [[Bridzs]]
-*Italian: bridge {{m}}
-*Latvian: [[bridžs]] {{m}}
-{{mid}}
-*Polish: [[brydż]] {{m}}
-*Russian: [[бридж]] (bridž) {{m}}
-*Serbian:
-*:Cyrillic: [[бриџ#Serbian|бриџ]] {{m}}
-*:Roman: [[bridž#Serbian|bridž]] {{m}}
-*Slovene: [[bridž]] {{m}}
-*Spanish: bridge {{m}}
-*Swedish: bridge
-*Turkish: [[briç]]
-{{bottom}}
-
 '''bony ridge of the nose'''
 {{top}}
 *Italian: [[setto]] nasale {{m}}
@@ -152,6 +129,45 @@
 ====Derived terms====
 * [[Maryland bridge]]
 * [[bridge mount]]
+
+===Noun===
+'''bridge'''
+
+#(''card games'') A [[card game]] played normally with four players playing as two teams of two players each.
+#: ''Bidding is an essential element of the game "'''Bridge'''".''
+
+====Translations====
+'''card game'''
+{{top}}
+*Bosnian: [[bridž#Bosnian|bridž]] {{m}}
+*Catalan: bridge {{m}}
+*Danish: bridge
+*Dutch: bridge
+*French: bridge {{m}}
+*Hungarian: [[bridzs]]
+*Italian: bridge {{m}}
+*Latvian: [[bridžs]] {{m}}
+{{mid}}
+*Polish: [[brydż]] {{m}}
+*Russian: [[бридж]] (bridž) {{m}}
+*Serbian:
+*:Cyrillic: [[бриџ#Serbian|бриџ]] {{m}}
+*:Roman: [[bridž#Serbian|bridž]] {{m}}
+*Slovene: [[bridž]] {{m}}
+*Spanish: bridge {{m}}
+*Swedish: bridge
+*Turkish: [[briç]]
+{{bottom}}
+
+===Verb===
+'''bridge'''
+
+# be or make ''bridge'' over something
+# [[gap]]
+# span as if with ''bridge''
+
+====Etymology====
+Old English ''[[brycġian]]''
 
 [[Category:1000 English basic words]]
 [[Category:Card games]]
