--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -4,9 +4,10 @@
 : from Middle French "''blond''" (masculine); "''blonde''" (feminine) which likely derived from Germanic.
 
 ===Noun===
-''(UK)'' '''blond'''
-#a person of [[fair]] skin and fair hair (usually spelled "''blonde''" when referring to a woman).
-#a [[pale]] [[golden]] [[brown]] [[colour]].
+{{en-noun-reg}}
+
+# {{UK}} a person of [[fair]] skin and fair hair (usually spelled "''blonde''" when referring to a woman).
+# {{UK}} a [[pale]] [[golden]] [[brown]] [[colour]].
 
 ===Usage notes===
 : In the English language, it is only one of a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurrence in other languages. "Blond(e)" has only recently been borrowed from French into English to refer to light hair; [[traditional]] terms for light hair in English are "''fair(-haired)''", "''[[flaxen]]''", and "''[[towhead|tow headed]]''".
@@ -24,7 +25,8 @@
 {{bottom}}
 
 ===Adjective===
-'''blond'''
+{{en-adj-er}}
+
 #of a bleached, or pale golden colour.
 #of a blond complexion (referring to a person)
 
