--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -42,7 +42,8 @@
 #: ''He tried to '''creep''' past the guard without being seen.''
 # ''(transitive):'' To change gradually in a particular direction.
 #: ''Prices have been '''creeping''' up all year.''
-
+====Etymology====
+Old English ''[[crēopan]]''
 ====Synonyms====
 *(''move slowly with the abdomen close to the ground''): [[crawl]]
 *(''grow across a surface rather than upwards'')
