--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -3,7 +3,8 @@
 ===Pronunciation===
 *[[IPA]]: {{IPAchar|/p&#650;l/}}
 *{{audio|en-us-pull.ogg|Audio (US)}}
-
+===Etymology===
+Old English ''[[pullian]]''
 ===Transitive verb===
 '''to pull''' ([[pulls]], [[pulled]], [[pulling]])
 
