--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -73,6 +73,7 @@ Old English [[þunor]].
 *Portuguese: [[troar]], [[trovejar]]
 *Swedish: [[dundra]] (1), [[dåna]] (1)
 *[[Tupinambá]]: [[sunung]]
+*Thai: สายฟ้า[[ฟาด]](Sai-Fa-Fad) , [[ฟ้าผ่า]](Fa-Pa)
 
 ===Derived terms===
 *[[thunderbolt]]
