--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -7,7 +7,7 @@ From the [[Persian]] words {{FAchar|&#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#
 ===Noun===
 {{wikipedia}}
 '''pajamas''' ''plural''
-#[[Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
+#(US) [[Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
 # loose-fitting [[trousers]] worn in the [[Far East]] by both sexes
 
 ===Alternative spellings===
@@ -18,6 +18,10 @@ From the [[Persian]] words {{FAchar|&#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#
 
 ====Translations====
 *''See [[pyjamas#Translations|pyjamas]]''
+
+====See Also====
+*[[nightshirt]]
+*[[nightie]]
 
 [[Category:Hindi derivations]]
 [[Category:Urdu derivations]]
