/* Translations */ <United States of America#1149140>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -59,6 +59,7 @@
 *Punjabi: [[ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ]]
 *Romanian: [[Statele Unite ale Americii]], ''short:'' [[Statele Unite]], [[SUA]]
 *Russian: [[Соединённые Штаты Америки]] (Sojedinjónnyje Štáty Amériki) ''m pl'', [[США]]
+*Scottish Gaelic: [[na Stàitean Aonaichte]] {{f pl}}
 *Serbian:
 *:Cyrillic: [[Сједињене Америчке Државе]] ''f pl'', [[САД]]
 *:Roman: [[Sjedinjene Američke Države]] ''f pl'', [[SAD]]
