{{IPA}} et al.; {{infl}} <port#1149388>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -1,12 +1,13 @@
 ==English==
+
 ===Pronunciation===
-{{IPA|/pɔ:t/}}
+* {{IPA|/pɔ:t/}}
 
 ===Etymology 1===
 Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 
 ====Noun====
-{{en-noun|port|ports}}
+{{en-noun}}
 
 # A place on the coast at which ships can shelter, or dock to load and unload cargo or passengers.
 # A town or city containing such a place.
@@ -21,7 +22,6 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 *(''left-hand side of a vessel''): [[starboard]]
 
 =====Translations=====
-
 '''place at which ships dock'''
 {{top}}
 *Dutch: [[haven#Dutch|haven]] ''f''
@@ -82,7 +82,8 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 *{{ttbc|Malay}}: [[bandar]] (2)
 
 ====Adjective====
-'''port''' ''(not comparable)''
+{{en-adj-notcomp}}
+
 # {{nautical}} Of or relating to port, the lefthand side of a vessel.
 #:''on the port side''
 
@@ -106,7 +107,7 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 From Latin [[porta]] ‘passage, gate’, reinforced in Middle English from Old French [[porte]].
 
 ====Noun====
-{{en-noun|port|ports}}
+{{en-noun}}
 
 # ''(obsolete except in Scots)'' An entryway, gate, or [[portal]].
 # A doorway in the side of a [[ship]], especially for boarding or loading; a [[porthole]].
@@ -116,7 +117,6 @@ From Latin [[porta]] ‘passage, gate’, reinforced in Middle English from Old 
 # ''(computing)'' A female connector of an electronic device, into which a cable's male connector can be inserted.
 
 =====Translations=====
-
 '''entryway, portal'''<br>
 :''See'' '''[[portal]]'''
 
@@ -143,7 +143,7 @@ From Latin [[porta]] ‘passage, gate’, reinforced in Middle English from Old 
 Named from [[w:Oporto|Oporto]], a city in [[Portugal]] from where the wines were shipped.
 
 ====Noun====
-{{en-noun|port|ports}}
+{{en-noun}}
 
 #A type of [[fortified]] wine traditionally made in [[Portugal]].
 
@@ -151,7 +151,6 @@ Named from [[w:Oporto|Oporto]], a city in [[Portugal]] from where the wines were
 *(''type of fortified wine traditionally made in Portugal''): [[porto]]<!--does this exist?-->, [[port wine]]
 
 =====Translations=====
-
 '''type of fortified wine traditionally made in Portugal'''
 {{top}}
 *Dutch: [[porto]], [[port]]
@@ -170,7 +169,7 @@ Named from [[w:Oporto|Oporto]], a city in [[Portugal]] from where the wines were
 Abbreviation of [[portmanteau]].
 
 ====Noun====
-{{en-noun|port|ports}}
+{{en-noun}}
 
 # {{AU}} (''colloquial'') A schoolbag or suitcase.
 
@@ -178,7 +177,7 @@ Abbreviation of [[portmanteau]].
 From Old (and modern) French [[porter]] ''(verb)'', [[port#French|port]] ''(noun)'', from Latin [[portare]] ‘carry’.
 
 ====Verb====
-{{en-verb|port|ports|ported|porting}}
+{{en-verb}}
 
 # {{obsolete}} To carry, bear, or [[transport]].<!--Whence "porter".-->
 # (''Military'') To hold a weapon with both hands diagonally across the body
@@ -186,7 +185,6 @@ From Old (and modern) French [[porter]] ''(verb)'', [[port#French|port]] ''(noun
 # {{computing}} To adapt a program so that it works on a different platform.
 
 =====Translations=====
-
 '''Military use'''
 {{top}}
 {{mid}}
@@ -211,14 +209,13 @@ From Old (and modern) French [[porter]] ''(verb)'', [[port#French|port]] ''(noun
 *[[porter]]
 
 ====Noun====
-{{en-noun|port|ports}}
+{{en-noun}}
 
 # ''(dated)'' the way in which a person carries themselves; [[bearing]]
 # something used to carry a thing, especially a frame for [[wick]]s in candle-making
 # {{computing}} The act of adapting a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
 
 =====Translations=====
-
 '''one's bearing'''
 {{top}}
 {{mid}}
@@ -245,6 +242,7 @@ From Old (and modern) French [[porter]] ''(verb)'', [[port#French|port]] ''(noun
 ----
 
 ==Dutch==
+
 ===Noun===
 '''port''' ''n''
 
@@ -258,9 +256,10 @@ From Old (and modern) French [[porter]] ''(verb)'', [[port#French|port]] ''(noun
 ----
 
 ==French==
+
 ===Pronunciation===
-*[[w:IPA|IPA]]: /pɔʁ/
-*[[w:SAMPA|SAMPA]]: /pOR/
+*{{IPA|/pɔʁ/}}
+*{{SAMPA|/pOR/}}
 
 ===Noun===
 '''port''' {{m}}
@@ -276,6 +275,7 @@ From Old (and modern) French [[porter]] ''(verb)'', [[port#French|port]] ''(noun
 ----
 
 ==Norwegian==
+
 ===Noun===
 {{no-noun-m1|port}}
 #[[gate]]
@@ -283,6 +283,7 @@ From Old (and modern) French [[porter]] ''(verb)'', [[port#French|port]] ''(noun
 ----
 
 ==Old English==
+
 ===Etymology===
 Latin ''[[portus]]''
 ===Noun===
@@ -295,6 +296,7 @@ Latin ''[[portus]]''
 ----
 
 ==Swedish==
+
 ===Noun===
 '''port''' ''c'' ([[porten]], [[portar]], [[portarna]])
 
