--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -65,6 +65,7 @@ Old English ''[[butere]]'', ultimately from Latin ''[[butyrum]]''
 *Dutch: [[beboteren]]; [[inboteren]]; met boter [[besmeren]]
 *German: [[mit]] Butter [[bestreichen]]
 *[[Interlingua]]: [[butyrar]]
+*Polish: [[smarować]] [[masłem]]
 *Portuguese: [[amanteigar]]; [[passar]] [[manteiga]] [[em]]
 *Russian: [[намазывать]] [[масло|маслом]] (namázyvat’ máslom)
 *Slovene: [[namazati z maslom]]
