--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -6,7 +6,7 @@
 From {{L.}} ''[[icon#Latin|icon]]'', derived from {{Gr.}} [[εἰκών]] (''eikon'') "likeness, image, figure, representation".
 
 ===Noun===
-{{en-noun|icon|icons}}
+{{en-noun}}
 [[Image:Cyril_Methodius25K.jpg|right|thumb|160px|A religious icon]]
 
 # [[image]], [[picture]], representation
@@ -89,6 +89,7 @@ These translations need to be checked by someone:
 ----
 
 ==Latin==
+
 [[Category:Latin words from Greek]]
 ===Etymology===
 From {{Gr.}} [[εἰκών]] (''eikon'') "likeness, image, figure, representation"
