--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -3,12 +3,13 @@
 {{rank|real|eye|sun|496|cut|everything|six|comes}}
 
 ===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /<tt>"kVt</tt>/
-*[[w:IPA|IPA]]: /kʌt/
+*{{SAMPA|/"kVt/}}
+*{{IPA|/kʌt/}}
 
 ===Verb===
 [[Category:English irregular verbs]]
-{{en-verb2|'''to cut'''|'''[[cuts]]'''|'''cut'''|'''cut'''|'''[[cutting]]'''}}
+{{en-verb|cuts|cutting|cut}}
+
 # To [[perform]] an [[incision]] with for example a [[knife]] ("I '''cut''' the skin on my arm.")
 # To [[separate]] from [[prior]] [[association]] ("Travis was '''cut''' from the team."); to [[edit]] a portion of a recording out.
 #''(automotive):'' to rudely interpose one's vehicle with disregard for safety ("That bastard '''cut''' me off!")
@@ -38,6 +39,7 @@
 {{bottom}}
 
 ====Translations====
+{{rfc-trans}}
 {{top}}
 *Albanian: [[pret]]
 *Bulgarian: [[сека]]
@@ -71,7 +73,8 @@
 {{bottom}}
 
 ===Noun===
-{{en-noun|cut|cuts}}
+{{en-noun}}
+
 # An opening resulting from cutting.
 #:''Look at this '''cut''' on my finger!''
 # The act of [[cutting]].
@@ -92,6 +95,7 @@
 #A deliberate [[snub]], typically a refusal to return a [[bow]] or other acknowledgement of acquaintance.
 
 ====Translations====
+{{rfc-trans}}
 {{top}}
 *Danish: [[snit]] (1,2,3,4,5,7), [[hug]] (1,2), tage af (6), [[skår]] (''glass, pottery''), [[billiger]] (8). [[spor]], [[mærke]], [[risse]], [[fure]], [[rille]].
 {{mid}}
@@ -101,9 +105,11 @@
 
 ===Adjective===
 '''cut'''
+
 # {{Cricket}} Of a shot played with a [[horizontal]] bat to hit the ball backward of point.
 # {{bodybuilding}} Having muscular [[definition]] in which individual groups of [[muscle]] fibers stand out among larger muscles.
 # {{colloquial}} [[Circumcised]].
+
 ====Translations====
 *German: [[beschnitten]] (3)
 
