--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -139,6 +139,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 [[Category:Oranges]]
 
 [[fr:flesh]]
+[[io:flesh]]
 [[hu:flesh]]
 [[pt:flesh]]
 [[sr:flesh]]
