[[User:Connel MacKenzie/clean|Random cleanup]], +rfd <ארץ#1155365>

--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -1,3 +1,4 @@
+{{rfd}}
 ==Hebrew==
 ===Inflections and Pronunciation===
 <table border = 1>
@@ -27,7 +28,7 @@ Plural
 * Russian: [[страна]]
 
 
-== Biblical Hebrew ==
+==Biblical Hebrew==
 Strong's Number:   776
  land, earth
    1. earth
