robot  Adding: qu <beautiful#1155703>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -108,6 +108,7 @@ Term meaning "What a mess!" or "What a screw-up!"
 [[hu:beautiful]]
 [[ja:beautiful]]
 [[pt:beautiful]]
+[[qu:beautiful]]
 [[ru:beautiful]]
 [[fi:beautiful]]
 [[zh:beautiful]]
