[[User:Connel MacKenzie/clean|Random cleanup]] <שבוע#1155705>

--- a/en/ש/שבוע.2113.wikitext
+++ b/en/ש/שבוע.2113.wikitext
@@ -1,5 +1,5 @@
 ==Hebrew==
-[[Category:Hebrew language]]
+
 ===Pronunciation===
 SAMPA
 ;singular:
@@ -7,19 +7,12 @@ SAMPA
 ;plural:
 * Svuot
 
-
 ===Noun===
-====singular====
-* שבוע (m)
+* שבוע {{s}}, {{m}}
+* שבועות {{p}}, {{m}}
 
-====plural====
-* שבועות (m)
- 
-===Definition===
-* A period of [[time]] consisting of seven [[day|days]].
- 
-===Translations===
-* English :[[week]]
-* German : [[Woche]]
+# A [[week]]; a period of [[time]] consisting of seven [[day|days]].
+
+[[Category:Hebrew language]]
 
 [[fr:שבוע]]
