--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -21,6 +21,7 @@ Abbreviation of Latin ''[[exempli grati&#257;]]'' ("for example"). ''Grati&#257;
 *Finnish: [[esim.]] (''[[esimerkiksi]]'')
 *French: [[par ex.]], [[p. ex.]] (''[[par exemple]]'')<!-- are both right? -->
 *German: [[z.B.]] (''[[zum Beispiel]]'')
+*Greek: [[π.χ.]] (''[[παραδείγματος χάριν]]'')
 {{mid}}
 *Italian: [[ad es.]] (''[[ad esempio]]'')
 *Russian: [[напр.]]
