--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -82,4 +82,5 @@
 [[fr:United States of America]]
 [[mi:United States of America]]
 [[nl:United States of America]]
+[[pt:United States of America]]
 [[sv:United States of America]]
