--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -36,6 +36,7 @@ Old English [[þunor]].
 *[[Interlingua]]: [[tonitro]]
 *Italian: [[tuono]] {{m}}
 *Japanese: [[雷]] ([[かみなり]]、kaminari), [[雷鳴]] ([[らいめい]], raimei)
+*Kinyarwanda: [[inkuba]]
 *[[Kurdish]]: [[birûsk]] {{f}}
 *Korean: [[우뢰]] (uroe)
 *Norwegian: [[torden]]
