--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -34,6 +34,7 @@ Old English [[cuman]].
 *Bavarian: [[kemma]]
 *Chinese: (''simplified'') [[来]] / (''traditional'') [[來]] (lái)
 *Dutch: [[komen]]
+*Esperanto: [[veni#Esperanto|veni]]
 *Finnish: [[tulla]]
 *French: [[venir]]
 *German: [[kommen]]
