--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -35,10 +35,11 @@
 ----
 
 ==Japanese==
+[[Category:1000_Japanese_basic_words|かさ]]
 [[Category:Japanese language|かさ]]
 ===Noun===
 {{janoun|かさ|kasa}}
-# [[umbrella]], [[parasol]]
+# an [[umbrella]], a [[parasol]]
 #*傘を[[差す]] 
 #*:かさをさす
 #*:kasa o sasu
