--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -39,7 +39,7 @@
 [[Category:Japanese language|かさ]]
 ===Noun===
 {{janoun|かさ|kasa}}
-# an [[umbrella]], a [[parasol]]
+# [[umbrella]], [[parasol]]
 #*傘を[[差す]] 
 #*:かさをさす
 #*:kasa o sasu
