--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -108,4 +108,5 @@ From {{Gr.}} [[εἰκών]] (''eikon'') "likeness, image, figure, representatio
 [[pl:icon]]
 [[ru:icon]]
 [[fi:icon]]
+[[vi:icon]]
 [[zh:icon]]
