robot  Adding: vi <plum#1207216>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -205,6 +205,7 @@ Latin [[plumbum]]
 # [[lead]] (metal)
 
 [[Category:Romansch nouns]]
+
 [[fr:plum]]
 [[io:plum]]
 [[it:plum]]
@@ -212,3 +213,4 @@ Latin [[plumbum]]
 [[ja:plum]]
 [[pl:plum]]
 [[fi:plum]]
+[[vi:plum]]
