robot  Adding: de, tr <libre#1217642>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -36,6 +36,7 @@ Latin [[liber]].
 
 [[Category:Spanish adjectives]]
 
+[[de:libre]]
 [[et:libre]]
 [[el:libre]]
 [[fr:libre]]
@@ -45,3 +46,4 @@ Latin [[liber]].
 [[hu:libre]]
 [[fi:libre]]
 [[vi:libre]]
+[[tr:libre]]
