--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -54,8 +54,10 @@
 
 ===Related terms===
 * [[European Central Bank]]
+
 [[io:European]]
 [[it:European]]
 [[hu:European]]
+[[pl:European]]
 [[fi:European]]
 [[sv:European]]
