--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -19,7 +19,7 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 *(''left-hand side of a vessel''): [[larboard]], [[left]]
 
 =====Antonyms=====
-*(''left-hand side of a vessel''): [[starboard]]
+*(''right-hand side of a vessel''): [[starboard]]
 
 =====Translations=====
 '''place at which ships dock'''
