--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -1,39 +1,35 @@
 ==English==
-=== Alternative spellings ===
-* [[spelled]]
+
+===Alternative spellings===
+*[[spelled]]
+
 ===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'spεlt/
+*{{IPA|/'spεlt/}}
 
 ===Verb===
 '''spelt'''
-# past tense of to [[spell]]
 
-===Translations===
-*Dutch: [[spelde]], [[spelden]]
-
-===Verb===
-'''spelt'''
-# past participle of to spell
-
-===Translations===
-*Dutch: [[gespeld]]
-*Spanish: [[deletreado]] {{m}}, [[deletreada]] {{f}}
+# {{past of|spell}}
 
 ===Noun===
 '''spelt'''
 
 # A type of [[wheat]], ''Triticum aestivum spelta''
 
-===Translations===
-*Dutch: spelt
+====Translations====
+{{top}}
+*Dutch: [[spelt]]
 *German: [[Dinkel]] {{m}}
+{{mid}}
+{{bottom}}
 
 ----
 
 ==Dutch==
+
 ===Noun===
 '''spelt''' {{n}}
-# kind of [[cereal]]
+
+# Kind of [[cereal]]
 
 [[nl:spelt]]
