minor clarifications to usage note <suck#1232349>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -10,7 +10,7 @@ Old English ''[[sūcan]]''
 #: ''You're great at baseball, but you suck at golf.''
 # '''a.''' (''often considered vulgar or strongly vulgar if used in a blatant sexual sense; sometimes considered vulgar otherwise'') to suck (def. 1) on a mammary gland of a human or animal '''b.''' (''can have differing degrees of vulgarity; see below'') '''suck off'''
 
-::'''''Usage Note:''''' ''Suck'' (defs. #2 & #3) is sometimes considered impolite or mildly vulgar.  With the word increasingly used by all strata of people in all manner of environments and situations, it is becoming less thought of as a possible vulgarism, and generally may just be thought of as impolite in certain situations.  The increasing "acceptance factor" and "hipness factor" of ''suck'' as used in defs. #2 and #3 have largely (although not entirely) taken out any potential shock value in the word, although again, it may still be found to be unacceptable or inappropriate in certain situations.
+::'''''Usage Note:''''' ''Suck'' (defs. #2 & #3) is sometimes considered impolite or mildly vulgar.  With the word increasingly used by all strata of people in all manner of environments and situations (again, regarding defs. #2 & #3), it is becoming less thought of as a possible vulgarism in these uses, and generally may just be thought of as impolite in certain situations (regarding such uses).  The increasing "acceptance factor" and "hipness factor" of ''suck'' as used in defs. #2 and #3 have largely (although not entirely) taken out any potential shock value in the word with such uses, although again, it may still be found to be unacceptable or inappropriate in certain situations (regarding such uses).
 
 ===Noun===
 *An act of sucking (defs. #1 & #4 above)
