--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -34,7 +34,7 @@
 {{bottom}}
 
 ====See also====
-*[[Countries of the world
+*[[Countries of the world]]
 
 [[de:Czech Republic]]
 [[el:Czech Republic]]
