--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -57,7 +57,7 @@
 {{bottom}}
 
 ===Transitive verb===
-{{en-infl-reg-consonant|stomach||}}
+{{en-verb}}
 # To be able to [[tolerate]] something, either emotionally or mentally; to [[stand]] or [[handle]] something.
 #:''I really can’t '''stomach''' jobs involving that much paperwork, but some people seem to tolerate them.''
 
