en-verb <play#1236989>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -84,7 +84,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 ===Etymology===
 Old English ''[[pleġian]]''
 ====Verb====
-{{en-infl-reg-consonant|play||}}
+{{en-verb}}
 
 # {{intransitive}}: To act in a manner such that one has [[fun]]; to engage in activities expressly for the purpose of recreation.
 # {{intransitive}}: To produce music using a musical instrument.
