--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -24,6 +24,7 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 =====Translations=====
 '''place at which ships dock'''
 {{top}}
+*Chinese: [[港口]] gǎngkǒu
 *Dutch: [[haven#Dutch|haven]] ''f''
 *Estonian: [[sadam]]
 *Finnish: [[satama]]
@@ -33,6 +34,8 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 {{mid}}
 *[[Ido]]: [[portuo]]
 *Italian: [[porto]] {{m}}
+*Japanese: [[港]]　([[みなと]], ''minato'')
+*Korean: [[항구]] ([[港口]] hanggu)
 *Hungarian: [[kikötő]]
 *Portuguese: porto {{m}}
 *Spanish: [[puerto]] {{m}}
