--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -1,33 +1,15 @@
 ==English==
+
 ===Etymology===
 Old English ''[[sūcan]]''
+
 ===Verb===
 {{en-verb}}
 
 # To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
-# (''colloquial; please see usage note'') Term of general disparagement, indicating the subject or situation has no redeeming qualities.
-# (''colloquial; please see usage note'') With ''at'', indicates a particular area of deficiency.
+# (''colloquial'') Term of general disparagement, indicating the subject or situation has no redeeming qualities.
+# (''colloquial'') With ''at'', indicates a particular area of deficiency.
 #: ''You're great at baseball, but you suck at golf.''
-# '''a.''' (''often considered vulgar or strongly vulgar if used in a blatant sexual sense; sometimes considered vulgar otherwise'') to suck (def. 1) on a [[mammary gland]] of a human or animal '''b.''' (''can have differing degrees of vulgarity; see below'') '''suck off'''
-
-::'''''Usage Note:''''' ''Suck'' (defs. #2 & #3) is sometimes considered impolite or mildly vulgar.  With the word increasingly used by all strata of people in all manner of environments and situations (again, regarding defs. #2 & #3), it is becoming less thought of as a possible vulgarism in these uses, and generally may just be thought of as impolite in certain situations (regarding such uses).  The increasing "acceptance factor" and "hipness factor" of ''suck'' as used in defs. #2 and #3 have largely (although not entirely) taken out any potential shock value in the word with such uses, although again, it may still be found to be unacceptable or inappropriate in certain situations (regarding such uses).
-
-===Noun===
-*An act of sucking (defs. #1 & #4 above)
-
-===suck up===
-*To attempt to curry favor (with someone):  ''She really sucked up to her new boss.''  The words ''try to'' may be used before ''suck up'' as also grammatically correct:  ''She really tried to suck up to her new boss.''
-
-===suck-up===
-One who sucks up (as in prior definition):  ''She's a real suck-up in the office.''
-
-===suck off===
-==phrase used as verb==
-#(''usually considered vulgar or strongly vulgar'') To perform [[fellatio]] on, often to the point of [[orgasm]]
-#(''usually considered vulgar or strongly vulgar'') To suck (def. 1 above) on a sexual organ or object, usually on a human or animal
-#(''often considered vulgar or somewhat vulgar'') To suck (def. 1 above) on a non-sexual object vigorously or in a prolonged way
-==phrase used as interjection==
-*(''usually considered vulgar; sometimes considered somewhat vulgar'') "Beat it!," "Scram," etc.  (Sometimes used as a milder form, but not always milder or much milder, for "[[Fuck off]]!")
 
 ====Synonyms====
 *(2, 3 above) To [[blow]]
