--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -6,7 +6,7 @@
 # The male ruler of a [[county]].  Also known as an [[earl]], especially in England.  (The female equivalent is [[countess]].)
 # The result of a tally that reveals the number of items in a set.
 # A [[countdown]].
-# {{law}} A [[charge]] of misconduct brought in a [[legal]] proceding.
+# {{law}} A [[charge]] of misconduct brought in a [[legal]] proceeding.
 
 ====Translations====
 ;The male ruler of a county (1)
