--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -33,7 +33,7 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 *French: substance {{f}}
 *German: [[Substanz]] {{f}}
 *Greek: [[ουσία]] (ousía) {{f}}
-*Hebrew: [[חומר]] {{m}}
+*Hebrew: [[חומר]] (khómer) {{m}}
 *Hungarian: [[tartalom]]
 *Indonesian: [[bahan]]
 *Interlingua: [[substantia]]
