robot  Adding: ro <New Zealand#1243998>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -93,6 +93,7 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 [[ko:New Zealand]]
 [[io:New Zealand]]
 [[hu:New Zealand]]
+[[ro:New Zealand]]
 [[ru:New Zealand]]
 [[fi:New Zealand]]
 [[sv:New Zealand]]
