--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Old English [[þunor]].
+{{etymon|ang|þunor}}
 
 ===Pronunciation===
 *{{AHD|/thŭn'dər/}}
@@ -10,7 +10,7 @@ Old English [[þunor]].
 
 ===Noun===
 {{wikipedia}}
-'''thunder''' (''uncountable'')
+{{en-noun|-}}
 
 #The [[sound]] caused by the discharge of atmospheric electrical charge. 
 #:'''Thunder''' ''is preceded by [[lightning]].''
@@ -19,6 +19,7 @@ Old English [[þunor]].
 #:''Off in the distance, he heard the '''thunder''' of hoofbeats, signalling a [[stampede]].''
 
 ====Translations====
+{{rfc-trans}}
 {{top}}
 *Arabic: {{ARchar|[[رعد]]}} {{Unicode|(raʕd)}}
 *[[Breton]]: [[kurun]] {{f}}, [[taran]] {{m}}
@@ -51,12 +52,13 @@ Old English [[þunor]].
 {{bottom}}
 
 ===Verb===
-'''to thunder''' (''Inflected forms'': [[thundered]], [[thundering]], thunders)
+{{en-verb}}
 
 #to make a noise like thunder.
 #to talk with a loud, threatening voice.
 
 ====Translations====
+{{rfc-trans}}
 *[[Breton]]: [[ober]] [[kurun]] (1), [[taranal]] / [[taraniñ]] (1,2)
 *Czech: [[hřmít]] (1,2), [[hromovat]] (2)
 *Dutch: [[donderen]] (1), [[overdonderen]] (2)
