--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -35,6 +35,7 @@
 {{mid}}
 *Spanish: [[cubierta]] ''f''
 *Swedish: [[lager]], [[täcklager]], [[hölje]], [[täcke]]
+*Tatar: [[coat#Tatar|coat]]
 {{bottom}}
 
 '''fur or feathers'''
@@ -81,6 +82,19 @@
 {{bottom}}
 
 [[Category:1000 English basic words]]
+
+==Tatar==
+===Etymology===
+'''Root:''' English coat, Middle English cote, Old French cote
+#''Etymological spelling:'' '''coat'''
+#''Phonetic spelling:'' koat
+
+===Noun===
+'''coat'''
+#A layer of any substance covering another.
+
+
+[[Category:Tatar language]]
 
 [[ar:coat]]
 [[fr:coat]]
