--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -3,25 +3,25 @@
 {{rank|free|return|call|354|speak|land|why|women}}
 
 ===Pronunciation===
-*{{IPA|/spēk/}}
-*{{IPA|/spiːk/}}
-*{{SAMPA|/spi:k/}}
+*{{IPA|/spēk/}}, {{IPA|/spiːk/}}, {{SAMPA|/spi:k/}}
 *{{audio|en-us-speak.ogg|Audio (US)}}
+
 ===Etymology===
 Old English ''[[sprēcan]]'' (later: ''spēcan'')
-===Verb===
-{{irregverb|'''to speak'''|'''[[speaks]]'''|'''[[spoke]] '''or, archaic,''' [[spake]]'''|'''[[spoken]]'''|'''[[speaking]]'''}}
 
-# to [[communicate]] by the use of sounds that are interpreted as language; to communicate verbally.
-# to make sounds with the vocal chords.
-# to express through writing.
-#:''He '''spoke''' of it in his diary''
-# to express without words.
-#:''Actions '''speak''' louder than words''.
-# to deliver a message to a group; to deliver a [[speech]].
-# to have the command of a language.
-#:''He '''speaks''' Klingon fluently''.
-# to converse by rapid interactive computerised means; chat online
+===Verb===
+{{en-verb|speaks|speaking|'''[[spoke]]''' ''or archaic'', '''[[spake]]'''|spoken}}
+
+# To [[communicate]] by the use of sounds that are interpreted as language; to communicate verbally.
+# To make sounds with the vocal chords.
+# To express through writing.
+#: ''He '''spoke''' of it in his diary''
+# To express without words.
+#: ''Actions '''speak''' louder than words''.
+# To deliver a message to a group; to deliver a [[speech]].
+# To have the command of a language.
+#: ''He '''speaks''' Klingon fluently''.
+# To converse by rapid interactive computerised means; chat online
 
 ====Synonyms====
 *[[articulate]]
@@ -70,7 +70,7 @@ Old English ''[[sprēcan]]'' (later: ''spēcan'')
 {{bottom}}
 
 ===Noun===
-'''speak''' (no plural)
+{{en-noun|-}}
 
 # [[language]], [[jargon]], or [[terminology]] used uniquely in a particular environment or group.
 #: ''Corporate speak; IT speak''
