--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -32,7 +32,7 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *French: [[Nouvelle-Zélande]] {{f}}
 *German: [[Neuseeland]] {{n}}
 *Greek: [[Νέα Ζηλανδία]] (Néa Zilandía) {{f}}
-*Hebrew: [[ניו זילנד]] ''f''
+*Hebrew: [[ניו זילנד]] (niu ziland) {{f}}
 *Hungarian: [[Új-Zéland]]
 *Indonesian: [[Selandia Baru]]
 *[[Interlingua]]: [[Nove Zelanda]]
