--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -32,3 +32,4 @@ From Latin [[mandatum]] or [[mandatus]], from [[mandare]] "to put in one's hands
 [[et:mandat]]
 [[fr:mandat]]
 [[id:mandat]]
+[[vi:mandat]]
