robot  Adding: simple <secretary#1251992>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -76,5 +76,6 @@ Medieval Latin ''[[secretarius]]'', one entrusted with [[secret]]s.
 [[io:secretary]]
 [[it:secretary]]
 [[hu:secretary]]
+[[simple:secretary]]
 [[fi:secretary]]
 [[zh:secretary]]
