/* Spanish */ note irregular superlative <libre#1252532>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -30,7 +30,7 @@ Latin [[liber]].
 {{IPA|/ˈliβɾe/}}
 
 ===Adjective===
-'''libre''' {{m}}/{{f}}
+'''libre''' {{m}}/{{f}} (superlative: '''[[libérrimo]]''')
 
 # [[free]], [[clear]], at liberty
 
