--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -24,6 +24,7 @@ From the Latin [[id est]], meaning “that is”.
 *Icelandic: [[þ.e.a.s.]] ((''[[það]] [[er]] [[að]] [[segja]]''))
 {{mid}}
 *Italian: [[cioè]]
+*Polish: [[tzn.]] (''[[to]] [[znaczyć|znaczy]]'')
 *Russian: [[т.е.]] ([[то есть]], ''tó jest’)
 *Spanish: [[es decir]]
 *Swedish: [[dvs]], [[d v s]], [[d.v.s.]] (''det vill säga'')
