robot  Adding: ko <倭#1256264>

--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -36,7 +36,9 @@
 
 ==Japanese==
 ===[[Kanji]]===
-{{kanji|on readings=[[い]] (i) < [[ゐ]] (wi), [[わ]] (wa)|kun readings=[[したがう]] (shitagau), [[やまと]] (yamato)}}
+{{kanji|on readings=[[い]] (i) < [[ゐ]] (wi), [[わ]] (wa)
+|kun readings=[[したがう]] (shitagau), [[やまと]] (yamato)
+}}
 
 * '''Other info''':  
 
@@ -72,3 +74,4 @@
 
 [[de:倭]]
 [[fr:倭]]
+[[ko:倭]]
