robot  Adding: vi <butter#1257090>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -160,5 +160,6 @@ Old English ''[[butere]]'', ultimately from Latin ''[[butyrum]]''
 [[fi:butter]]
 [[sv:butter]]
 [[ta:butter]]
+[[vi:butter]]
 [[uk:butter]]
 [[zh:butter]]
