--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -1,23 +1,29 @@
 ==English==
-=== Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'kliɳ/
 
-=== Verb ===
-{{irregverb|cling|[[clings]]|[[clung]]|[[clung]]|[[clinging]]}}
-# to [[hold]] very [[tight]]ly, as to not fall off
+===Pronunciation===
+*{{IPA|/'kliɳ/}}
 
-==== Translations ====
+===Verb===
+{{en-verb|clings|clinging|clung}}
+
+# To [[hold]] very [[tight]]ly, as to not fall off
+
+====Derived terms====
+*[[cling film]] / [[clingfilm]]
+
+====Translations====
 {{top}}
 *Dutch: [[klampen]]
 *Indonesian: [[sangkut|menyangkut]], [[sangkut|menyangkutkan]], [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]]
 {{mid}}
 *Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. Online version [http://www.oxfordparavia.it/ here]</ref>
-*Japanese:[[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
+*Japanese: [[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
 {{bottom}}
 
-===Derived terms===
-*[[cling film]] / [[clingfilm]]
+===References===
+{{R:Century 1911}}
+{{R:Webster 1913}}
+
 [[et:cling]]
 [[ko:cling]]
 [[pl:cling]]
