--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -71,6 +71,8 @@ From Old English [[ceosan|ċēosan]].
 {{R:Century 1911}}
 {{R:Webster 1913}}
 
+[[Category:English irregular verbs]]
+
 [[de:choose]]
 [[fr:choose]]
 [[gl:choose]]
