robot  Adding: de <butter#1261897>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -149,6 +149,7 @@ Old English ''[[butere]]'', ultimately from Latin ''[[butyrum]]''
 [[Category:Condiments]]
 
 [[ar:butter]]
+[[de:butter]]
 [[el:butter]]
 [[fr:butter]]
 [[ko:butter]]
