robot  Adding: ko <倥#1262371>

--- a/en/倥/倥.11034.wikitext
+++ b/en/倥/倥.11034.wikitext
@@ -35,7 +35,9 @@
 
 ==Japanese==
 ===[[Kanji]]===
-{{kanji|on readings=[[こう]] (kō)|kun readings=[[ぬかる]] (nukaru)}}
+{{kanji|on readings=[[こう]] (kō)
+|kun readings=[[ぬかる]] (nukaru)
+}}
 
 * '''Other info''':  
 
@@ -68,3 +70,4 @@
 ** Decimal: 44483
 
 [[fr:倥]]
+[[ko:倥]]
