robot  Adding: ko <假#1262438>

--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -37,7 +37,9 @@
 
 ==Japanese==
 ===[[Kanji]]===
-{{kanji|on readings=[[か]] (ka), [[け]] (ke)|kun readings=[[かり]] (kari)}}
+{{kanji|on readings=[[か]] (ka), [[け]] (ke)
+|kun readings=[[かり]] (kari)
+}}
 
 * '''Other info''':  
 
@@ -70,3 +72,4 @@
 ** Decimal: 45234
 
 [[fr:假]]
+[[ko:假]]
