robot  Adding: ko <傌#1262488>

--- a/en/傌/傌.11164.wikitext
+++ b/en/傌/傌.11164.wikitext
@@ -35,7 +35,9 @@
 
 ==Japanese==
 ===[[Kanji]]===
-{{kanji|on readings=[[ば]] (ba), [[め]] (me)|kun readings=[[ののしる]] (nonoshiru)}}
+{{kanji|on readings=[[ば]] (ba), [[め]] (me)
+|kun readings=[[ののしる]] (nonoshiru)
+}}
 
 * '''Other info''':  
 
@@ -68,3 +70,4 @@
 ** Decimal: 55384
 
 [[fr:傌]]
+[[ko:傌]]
