robot  Adding: ko <垠#1263466>

--- a/en/垠/垠.13092.wikitext
+++ b/en/垠/垠.13092.wikitext
@@ -34,7 +34,9 @@
 
 ==Japanese==
 ===[[Kanji]]===
-{{kanji|on readings=[[ぎん]] (gin), [[ごん]] (gon)|kun readings=[[さかい]] (sakai), [[きし]] (kishi)}}
+{{kanji|on readings=[[ぎん]] (gin), [[ごん]] (gon)
+|kun readings=[[さかい]] (sakai), [[きし]] (kishi)
+}}
 
 * '''Other info''':  
 
@@ -67,3 +69,4 @@
 ** Decimal: 43949
 
 [[fr:垠]]
+[[ko:垠]]
