--- a/en/垓/垓.13079.wikitext
+++ b/en/垓/垓.13079.wikitext
@@ -37,7 +37,9 @@
 
 ==Japanese==
 ===[[Kanji]]===
-{{kanji|on readings=[[がい]] (gai), [[かい]] (kai)|kun readings=[[はて]] (hate), [[さかい]] (sakai)}}
+{{kanji|on readings=[[がい]] (gai), [[かい]] (kai)
+|kun readings=[[はて]] (hate), [[さかい]] (sakai)
+}}
 
 * '''Other info''':  
 
@@ -71,3 +73,4 @@
 
 [[fr:垓]]
 [[ja:垓]]
+[[fi:垓]]
