--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -157,6 +157,7 @@ Old English ''[[butere]]'', ultimately from Latin ''[[butyrum]]''
 [[it:butter]]
 [[hu:butter]]
 [[pl:butter]]
+[[ru:butter]]
 [[sr:butter]]
 [[fi:butter]]
 [[sv:butter]]
