--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -41,4 +41,5 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 [[it:zenith]]
 [[ja:zenith]]
 [[pl:zenith]]
+[[vi:zenith]]
 [[zh:zenith]]
