{{ttbc}}, [[User:Connel MacKenzie/Format|fmt]] <substance#1267784>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -22,47 +22,47 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 {{rfc-trans}}
 =====Translations to be checked=====
 {{checktrans}}
-{{top}}
-*Albanian: [[lëndë]]
-*Arabic: {{ARchar|[[مادة]]}} (mádda) {{f}}
-*Azerbaijani: [[maddə]]
-*Bulgarian: [[вещество]] (vešestvo) {{n}}
-*Chinese: [[物質]], [[物质]] (wùzhí)
-*Czech: [[látka]] {{f}}
-*Dutch: [[substantie]]
-*Esperanto: [[substanco]]
-*Estonian: [[aine]]
-*Finnish: [[aine]]
-*French: substance {{f}}
-*German: [[Substanz]] {{f}}
-*Greek: [[ουσία]] (ousía) {{f}}
-*Hebrew: [[חומר]] (khómer) {{m}}
-*Hungarian: [[tartalom]]
-*Indonesian: [[bahan]]
-*Interlingua: [[substantia]]
-*Italian: [[sostanza]] {{f}}
-*Japanese: [[実体]] ([[じったい]]) (jittai), [[物質]] (ぶっしつ, busshitsu)
-{{mid}}
-*Korean: [[실체]] (silche), [[물질]] (muljil)
-*Latvian: [[viela]]
-*Lithuanian: [[turinys]]
-*Middle English: [[substaunce]]
-*Norwegian: [[substans]]
-*Persian: {{FAchar|[[خلاصه]]}} (kholâseh)
-*Polish: [[istota]] {{f}}
-*Portuguese: [[substância]] {{f}}
-*Romanian: [[substanţă]] {{f}}
-*Russian: [[вещество]] (veščestvó) {{n}}
-*Slovak: [[hmota]] {{f}}
-*Spanish: [[sustancia]] {{f}}
-*Swedish: [[ämne]], [[substans]]
-*[[Telugu]]: [[పదార్థము]] (padaarthamu)
-*Turkish: [[madde]]
-*Uyghur: (madda)
-*Vietnamese: [[chất]]
-*Welsh: [[sylwedd]]
-*Yiddish: [[מאַטעריע]] (materye)
-{{bottom}}
+
+*{{ttbc|Albanian}}: [[lëndë]]
+*{{ttbc|Arabic}}: {{ARchar|[[مادة]]}} (mádda) {{f}}
+*{{ttbc|Azerbaijani}}: [[maddə]]
+*{{ttbc|Bulgarian}}: [[вещество]] (vešestvo) {{n}}
+*{{ttbc|Chinese}}: [[物質]], [[物质]] (wùzhí)
+*{{ttbc|Czech}}: [[látka]] {{f}}
+*{{ttbc|Dutch}}: [[substantie]]
+*{{ttbc|Esperanto}}: [[substanco]]
+*{{ttbc|Estonian}}: [[aine]]
+*{{ttbc|Finnish}}: [[aine]]
+*{{ttbc|French}}: substance {{f}}
+*{{ttbc|German}}: [[Substanz]] {{f}}
+*{{ttbc|Greek}}: [[ουσία]] (ousía) {{f}}
+*{{ttbc|Hebrew}}: [[חומר]] (khómer) {{m}}
+*{{ttbc|Hungarian}}: [[tartalom]]
+*{{ttbc|Indonesian}}: [[bahan]]
+*{{ttbc|Interlingua}}: [[substantia]]
+*{{ttbc|Italian}}: [[sostanza]] {{f}}
+*{{ttbc|Japanese}}: [[実体]] ([[じったい]]) (jittai), [[物質]] (ぶっしつ, busshitsu)
+
+*{{ttbc|Korean}}: [[실체]] (silche), [[물질]] (muljil)
+*{{ttbc|Latvian}}: [[viela]]
+*{{ttbc|Lithuanian}}: [[turinys]]
+*{{ttbc|Middle English}}: [[substaunce]]
+*{{ttbc|Norwegian}}: [[substans]]
+*{{ttbc|Persian}}: {{FAchar|[[خلاصه]]}} (kholâseh)
+*{{ttbc|Polish}}: [[istota]] {{f}}
+*{{ttbc|Portuguese}}: [[substância]] {{f}}
+*{{ttbc|Romanian}}: [[substanţă]] {{f}}
+*{{ttbc|Russian}}: [[вещество]] (veščestvó) {{n}}
+*{{ttbc|Slovak}}: [[hmota]] {{f}}
+*{{ttbc|Spanish}}: [[sustancia]] {{f}}
+*{{ttbc|Swedish}}: [[ämne]], [[substans]]
+*{{ttbc|Telugu}}: [[పదార్థము]] (padaarthamu)
+*{{ttbc|Turkish}}: [[madde]]
+*{{ttbc|Uyghur}}: (madda)
+*{{ttbc|Vietnamese}}: [[chất]]
+*{{ttbc|Welsh}}: [[sylwedd]]
+*{{ttbc|Yiddish}}: [[מאַטעריע]] (materye)
+
 
 ===Related Terms===
 *[[stand under]]
