--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -124,5 +124,6 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 [[pt:find]]
 [[ru:find]]
 [[fi:find]]
+[[tr:find]]
 [[uk:find]]
 [[zh:find]]
