--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -1,8 +1,9 @@
 ==English==
+
 ===Noun===
 '''[[united|United]] [[states|States]] [[of]] [[America]]'''
 
-#[[Category:Countries]] Country in [[North America]] located between [[Canada]] and [[Mexico]].
+# The country in [[North America]], sharing land borders with [[Canada]] and [[Mexico]], stretching from the [[Atlantic Ocean|Atlantic]] to the [[Pacific Ocean]], and including [[Alaska]] and [[Hawaii]].
 
 ====Related terms====
 *[[United States]]
@@ -12,27 +13,27 @@
 
 ====Translations====
 {{top}}
-*Arabic: {{ARchar|[[الولايات المتحدة الامريكية]]}} (al-wilayá:t al-mutáħedat al-’amrikíyya), {{ARchar|[[الولايات المتحدة]]}} (al-wilayá:t al-mutáħeda) ''f pl''
+*Arabic: {{ARchar|[[الولايات المتحدة الامريكية]]}} (al-wilayá:t al-mutáħedat al-’amrikíyya), {{ARchar|[[الولايات المتحدة]]}} (al-wilayá:t al-mutáħeda) {{f}} {{p}}
 *Armenian: [[Ամէրիկայի Միացյալ Նահանգնէր]] (Amērikayi Miats‘yal Nahangnēr)
 *Azeri: [[Amerika Birləşmiş Ştatları]]
 *Bengali: {{BNchar|[[মার্কিন যুক্তরাষ্ট্র]]}}
-*Bosnian: [[Sjedinjene Američke Države]] ''f pl'', [[Amerika]] {{f}}, [[SAD]]
-*[[Breton]]: [[Stadoù-Unanet Amerika]] ''f pl'', [[SUA]]
+*Bosnian: [[Sjedinjene Američke Države]] {{f}} {{p}}, [[Amerika]] {{f}}, [[SAD]]
+*[[Breton]]: [[Stadoù-Unanet Amerika]] {{f}} {{p}}, [[SUA]]
 *Bulgarian: [[Съединени Американски Щати]] (Sǎedineni amerikanski štati), [[САЩ]]
-*[[Catalan]]: [[Estats Units d'Amèrica]] ''m pl''
+*[[Catalan]]: [[Estats Units d'Amèrica]] {{m}} {{p}}
 *Chinese: [[美利坚合众国]]/[[美利堅合衆國]] (Měilìjiān Hézhòngguó); [[美国]]/[[美國]] (Měiguó)
 *Croatian: [[Sjedinjene Američke Države]] {{f}} {{p}}
 *Czech [[Spojené státy americké]], [[Spojené státy]]
 *Danish: [[Amerikas Forenede Stater]], [[Forenede Stater]]
-*Dutch: [[Verenigde Staten van Amerika]] ''f pl'', [[Verenigde Staten]], [[VS]]
+*Dutch: [[Verenigde Staten van Amerika]] {{f}} {{p}}, [[Verenigde Staten]], [[VS]]
 *[[Esperanto]]: [[Usono]], [[Unuiĝintaj Ŝtatoj de Ameriko]]
 *Estonian: [[Ameerika Ühendriigid]]
 *Finnish: [[Amerikan Yhdysvallat]], ''short:'' [[Yhdysvallat]], [[USA]]
-*French: [[États-Unis d'Amérique]] ''m pl'', (''short form'') [[États-Unis]] ''m pl'', [[É-U]]
+*French: [[États-Unis d'Amérique]] {{m}} {{p}}, (''short form'') [[États-Unis]] {{m}} {{p}}, [[É-U]]
 *[[Frisian]]: [[Feriene Steaten fan Amearika]]
 *Georgian: [[ამერიკის შეერთებული შტატები]] (amerikis šeert‘ebuli štatebi)
-*German: [[Vereinigte Staaten von Amerika]] {{m}} ''pl'', (''short form'') [[Vereinigte Staaten]] {{m}} ''pl'', [[USA]] {{m}} ''pl'' or {{f}} ''singular''
-*Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] ''f pl'', [[Ηνωμένες Πολιτείες Αμερικής]] ''f pl'', (''short form'') [[Ηνωμένες Πολιτείες]] ''f pl'', [[ΗΠΑ]]
+*German: [[Vereinigte Staaten von Amerika]] {{m}} {{p}}, (''short form'') [[Vereinigte Staaten]] {{m}} {{p}}, [[USA]] {{m}} {{p}} or {{f}} ''singular''
+*Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] {{f}} {{p}}, [[Ηνωμένες Πολιτείες Αμερικής]] {{f}} {{p}}, (''short form'') [[Ηνωμένες Πολιτείες]] {{f}} {{p}}, [[ΗΠΑ]]
 *Gujarati: [[સંયુકત રાજ્ય અમેરિકા]]
 *Hawaiian: [['Amelika Huipū'ia]]
 *Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel Amerika), ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה״ב]] (ARH-B)
@@ -41,7 +42,7 @@
 *Indonesia: [[Amerika Serikat]]
 *[[Interlingua]]: [[Statos Unite de America]]
 *Irish: [[Meiriceá]]
-*Italian: [[Stati Uniti d'America]] ''m pl'', (''short form'') [[Stati Uniti]] ''m pl'', [[SUA]]
+*Italian: [[Stati Uniti d'America]] {{m}} {{p}}, (''short form'') [[Stati Uniti]] {{m}} {{p}}, [[SUA]]
 {{mid}}
 *Japanese: [[米国]] (べいこく, Béikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, Ameriká Gasshūkoku)
 *Kazakh: [[Америка Құрама Штаттары]]
@@ -54,30 +55,32 @@
 *Nepali: [[संयुक्त राज्य अमेरिका]] (Sa.nyukta Rājya Amerīkā)
 *Norwegian: [[Amerikas forente stater]], [[De forente stater]]
 *Persian: {{FAchar|[[ایالات متحده امریکا|ایالات متحده آمریکا]]}} (ayâlât-e motahideh âmrika)
-*Polish: [[Stany Zjednoczone Ameryki]] ''m pl'', [[Stany Zjednoczone Ameryki Północnej]], ''short:'' [[Stany Zjednoczone]], ''abbr:'' [[SZA]], ''colloquial:'' [[Stany]], [[USA]]
-*Portuguese: [[Estados Unidos da América]] ''m pl'', ''short:'' [[Estados Unidos]] ''m pl'', [[EUA]]
+*Polish: [[Stany Zjednoczone Ameryki]] {{m}} {{p}}, [[Stany Zjednoczone Ameryki Północnej]], ''short:'' [[Stany Zjednoczone]], ''abbr:'' [[SZA]], ''colloquial:'' [[Stany]], [[USA]]
+*Portuguese: [[Estados Unidos da América]] {{m}} {{p}}, ''short:'' [[Estados Unidos]] {{m}} {{p}}, [[EUA]]
 *Punjabi: [[ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ]]
 *Romanian: [[Statele Unite ale Americii]], ''short:'' [[Statele Unite]], [[SUA]]
-*Russian: [[Соединённые Штаты Америки]] (Sojedinjónnyje Štáty Amériki) ''m pl'', [[США]]
-*Scottish Gaelic: [[na Stàitean Aonaichte na h-Amaireaga]] ''f pl''
+*Russian: [[Соединённые Штаты Америки]] (Sojedinjónnyje Štáty Amériki) {{m}} {{p}}, [[США]]
+*Scottish Gaelic: [[na Stàitean Aonaichte na h-Amaireaga]] {{f}} {{p}}
 *Serbian:
-*:Cyrillic: [[Сједињене Америчке Државе]] ''f pl'', [[САД]]
-*:Roman: [[Sjedinjene Američke Države]] ''f pl'', [[SAD]]
-*Slovak: [[Spojené Štáty Americké]] ''m pl'', [[USA]]
-*Slovene: [[Združene države Amerike]] ''f pl'', [[Združene države]] ''f pl'' (short form), [[ZDA]]
+*:Cyrillic: [[Сједињене Америчке Државе]] {{f}} {{p}}, [[САД]]
+*:Roman: [[Sjedinjene Američke Države]] {{f}} {{p}}, [[SAD]]
+*Slovak: [[Spojené Štáty Americké]] {{m}} {{p}}, [[USA]]
+*Slovene: [[Združene države Amerike]] {{f}} {{p}}, [[Združene države]] {{f}} {{p}} (short form), [[ZDA]]
 *Spanish: [[Estados Unidos de América]] ''m sg'', (''short form'') Estados Unidos ''m sg'', ''abbr:'' [[EE. UU.]] ''m sg'', [[EEUU]]
 *Swedish: [[Amerikas förenade stater]], [[Förenta staterna]]
 *Tajik: [[Иёлоти Муттаҳидаи Амриқо]] (Iyoloti Muttaħidai Amriqo)
 *Turkish: [[Amerika Birleşik Devletleri]], [[ABD]]
-*Ukrainian: [[Сполучені Штати Америки]] (Spolučeni Štáti Amériki) ''m pl'', [[США#Ukrainian|США]]
+*Ukrainian: [[Сполучені Штати Америки]] (Spolučeni Štáti Amériki) {{m}} {{p}}, [[США#Ukrainian|США]]
 *Uyghur: {{FAchar|[[ﺋﺎﻣﯧﺮﯨﻜﺎ ﻗﻮﺷﻤﺎ ﺷﺘﺎﺗﻠﯩﺮﻯ]]}} (’amerika quşma ştatleri)
 *Uzbek: [[Amerika Qo'shma Shtatlari]]
 *Vietnamese: [[Hoa Kỳ]], [[Nước Mỹ]], [[Mỹ Quốc]] (''short forms''); [[Hợp Chủng Quốc Hoa Kỳ]] (''long form''); [[HK#Vietnamese|HK]] (''abbr.''), [[Mỹ]] (''abbr.'')
 {{bottom}}
 
-====See also====
+===See also===
 *[[w:United States of America]]
 *[[Wiktionary Appendix:Countries of the world]]
+
+[[Category:Countries]]
 
 [[fr:United States of America]]
 [[ko:United States of America]]
