--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -3,7 +3,7 @@
 ==English==
 {{wikipedia}}
 ===Etymology===
-'''Old French''' ''safran'' & '''Latin''' ''safranum''
+'''Old French''' ''safran'', from medieval latin ''safranum'', from arabo-persian "za'farân"
 
 ===Noun===
 '''saffron''' (''plural'': '''saffrons''', '''saffron''')
