--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -30,6 +30,7 @@ From Old English [[ceosan|ċēosan]].
 {{mid}}
 *Italian: [[eleggere]]
 *Swedish: [[välja]]
+*Tagalog: [[pili]]
 {{bottom}}
 
 '''to pick''' (2)
@@ -42,6 +43,7 @@ From Old English [[ceosan|ċēosan]].
 *Italian: [[scegliere]], [[selezionare]]
 *Maori: [[whiri]]
 *Swedish: [[välja]]
+*Tagalog: [[pili]]
 {{bottom}}
 
 '''decide to act in a certain way''' (3)
@@ -64,7 +66,6 @@ From Old English [[ceosan|ċēosan]].
 *{{ttbc|Norwegian}}: [[velge]], [[utvelge]], [[beslutte]]
 *{{ttbc|Slovene}}: [[izbrati]]
 *{{ttbc|Spanish}}: [[escoger]], [[elegir]]
-*{{ttbc|Tagalog}}: [[pili]]
 *{{ttbc|Tongan}}: [[fili]]
 
 ===References===
