/* Translations */ FO <France#1292157>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -36,6 +36,7 @@
 *Dutch: [[Frankrijk]] {{n}}
 *Esperanto: [[Francio]], [[Francujo]]
 *Estonian: [[Prantsusmaa]]
+*Faroe Islands [[Frakland]]
 *Finnish: [[Ranska]]
 *French: France {{f}}
 *Frisian: [[Frankryk]]
