--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -60,7 +60,7 @@ Old English ''[[sprēcan]]'' (later: ''spēcan'')
 *Latin: [[dicere]]
 *Portuguese: [[falar]]
 *Romanian: [[vorbi]],  [[discuta]]
-*Romansh: [[pledar]],  [[tschantschar]]
+*Romansch: [[pledar]],  [[tschantschar]]
 *Russian: [[говорить]] (govorít’)
 *Scottish Gaelic: [[bruidhinn]]
 *Slovak: [[rozprávať]], [[hovoriť]]
