--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -37,7 +37,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *Frisian: [[moai]], [[kreas]]
 *German: [[schön]]
 *Greek: [[ωραίος]] (oréyos)
-*Hindi: [[खूबसूरत]] (khoobasoorat)
+*Hindi: [[ख़ूबसूरत]] (khoobasoorat)
 *Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 *Italian: [[bello]]
 *Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
