--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -18,40 +18,41 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 '''very attractive'''
 {{top}}
 *Afrikaans: [[mooi]]
-*Albanian:  i bukur ''m'', e bukur ''f''
+*Albanian:  i bukur {{m}}, e bukur {{f}}
 *Anglo-Saxon: [[wlitig]]
-*Arabic: [[جميل]] (jamil)
+*Arabic: {{ARchar|[[جميل]]}} (jamil)
 *Breton: [[brav]], [[kaer]]
-*Bulgarian:[[красив, прекрасен]]
+*Bulgarian: [[красив]], [[прекрасен]]
 *Chinese: [[漂亮]] (piàoliàng, piao4liang4), [[美]] (měi, meili, mei3li4)
-*Danish: [[smuk]] ''en'', [[smukt]] ''et'', [[smukke]] ''pl.''
+*Danish: [[smuk]] ''en'', [[smukt]] ''et'', [[smukke]] {{p}}
 *Dutch: [[mooi]]
 *Esperanto: [[bela]]
 *Estonian: [[kaunis]] [[ilus]]
 *Fijian: [[totoka]]
 *Filipino: [[maganda]]
 *Finnish: [[kaunis]]
-*French: [[beau]] ''m'', [[belle]] ''f''
-*Faeroese: [[vakur]] ''m'', [[vøkur]] ''f'' [[vakurt]] ''n''
-{{mid}}
+*French: [[beau]] {{m}}, [[belle]] {{f}}
+*Faeroese: [[vakur]] {{m}}, [[vøkur]] {{f}} [[vakurt]] {{n}}
 *Frisian: [[moai]], [[kreas]]
 *German: [[schön]]
 *Greek: [[ωραίος]] (oréyos)
-*Hindi: [[ख़ूबसूरत]] (khoobasoorat)
+*Hindi: [[ख़ूबसूरत]] (<u>kh</u>ūbsūrat)
+{{mid}}
 *Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 *Italian: [[bello]]
 *Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
-*Latin: [[pulcher]], [[formosus]] ''m'', [[bellus]] ''m''
+*Latin: [[pulcher]], [[formosus]] {{m}}, [[bellus]] {{m}}
 *Persian: {{FAchar|[[زیبا]]}} (ziba)
 *Polish: [[piękny]]
-*Portuguese: [[belo]] ''m'', [[bela]] ''f'', [[bonito]] ''m'', [[bonita]] ''f''
+*Portuguese: [[belo]] {{m}}, [[bela]] {{f}}, [[bonito]] {{m}}, [[bonita]] {{f}}
 *Russian: [[красивый]],[[прекрасный]]
 *Scots Gaelic: [[àlainn]], [[bòidheach]], [[brèagha]], [[fèilleil]], [[grinn]], [[maiseach]], [[rìomhach]], [[sgèimheach]]
-*Spanish: [[hermoso]] ''m'', [[hermosa]] ''f'', ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
-*Slovak: [[krásny]] ''m'', krásna ''f'', krásne ''n''
+*Spanish: [[hermoso]] {{m}}, [[hermosa]] {{f}}, ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
+*Slovak: [[krásny]] {{m}}, krásna {{f}}, krásne {{n}}
 *Swedish: [[vacker]]
 *[[Telugu]]: [[అందమైన]]
 *Turkish: [[güzel]]
+*Urdu: {{URchar|[[خوبصورت]]}} (<u>kh</u>ūbsūrat)
 *Vietnamese: [[đẹp]], [[đẹp đẽ]]
 {{bottom}}
 
