--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -32,7 +32,7 @@ In an interlinear, literal translation of [[Genesis]] 32:28, the first mention o
 *French: [[Israël]]
 *German: Israel
 *Greek: [[Ισραήλ]] (israíl) {{n}}
-*Hebrew: [[ישראל|יִשְׂרָאֵל]] (Yisraël)
+*Hebrew: [[ישראל|יִשְׂרָאֵל]] (Yīśrāël)
 {{mid}}
 *Hungarian: [[Izrael]]
 *Icelandic: [[Ísrael]]
