lack of common meaning cat <惵#1300852>

--- a/en/惵/惵.15626.wikitext
+++ b/en/惵/惵.15626.wikitext
@@ -14,7 +14,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -32,7 +32,9 @@
 
 ==Japanese==
 ===[[Kanji]]===
-{{kanji|on readings=[[ちょう]] (chō), [[じょう]] (jō), [[きょう]] (kyō)|kun readings=[[やすらか]] (yasuraka)}}
+{{kanji|on readings=[[ちょう]] (chō), [[じょう]] (jō), [[きょう]] (kyō)
+|kun readings=[[やすらか]] (yasuraka)
+}}
 
 * '''Other info''':  
 
@@ -53,5 +55,7 @@
 * '''Big5''':
 ** Hex: D944
 ** Decimal: 55620
+
+[[Category:CJKV Character articles lacking a common meaning|心+09]]
 
 [[fr:惵]]
