--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -9,26 +9,29 @@
 ===Noun===
 {{en-noun-reg}}
 
-#A utensil, usually [[tubular]] in form, containing ink used to [[write]] or make marks.
+# A utensil, usually [[tubular]] in form, containing ink used to [[write]] or make marks.
 #: ''He took notes with a '''pen'''.''
 # A mark made with [[ink]].
 #: ''I need some stain remover, this mark is in '''pen'''.''
-#An [[enclose]]d area used to contain [[domesticated]] animals, especially [[sheep]] or [[cattle]].
+# An [[enclose]]d area used to contain [[domesticated]] animals, especially [[sheep]] or [[cattle]].
 #: ''There are two steers in the third '''pen'''.''
-#{{baseball}} The [[bullpen]].
+# {{baseball}} The [[bullpen]].
 #: ''Two righties are up in the '''pen'''.''
-#A female [[swan]].
+# A female [[swan]].
 
 ====Related terms====
+{{top}}
 *[[penmanship]]
 *[[ball-point pen]]
 *[[cartridge pen]]
+{{mid}}
 *[[felt-tip pen]]
 *[[fountain pen]]
 *[[poison pen]]
+{{bottom}}
 
 ====Translations====
-(''writing utensil'')
+;writing utensil
 {{top}}
 *Arabic: {{ARchar|[[قلم]]}} (qálam)
 *Dutch: pen {{f}}
@@ -38,8 +41,8 @@
 *Indonesian: pen, [[pena]]
 *Irish: [[peann]] {{m}}
 *Italian: [[penna#Italian|penna]] {{f}}
-{{mid}}
 *Japanese: [[ペン]] (pen)
+{{mid}}
 *Persian: {{FAchar|[[قلم]]}} (ghalam)
 *Polish: [[pióro]] {{n}}, [[długopis]] {{m}}
 *Portuguese: [[caneta]] {{f}}
@@ -50,16 +53,16 @@
 *Turkish: [[kalem]]
 {{bottom}}
 
-(''an enclosed area'')
+;an enclosed area
 {{top}}
 *French: [[enclos]] {{m}}
-*Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, (''for sheep'') [[ovile]] {{m}}, recinto, chiuso
+*Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, {{italbrac|for sheep}} [[ovile]] {{m}}, recinto, chiuso
 {{mid}}
 *Russian: [[загон]] (zagón) {{m}}
 *Spanish: [[corral]] {{m}}
 {{bottom}}
 
-(''female swan'')
+;female swan
 {{top}}
 *French: [[cygne]] [[femelle]] {{m}}
 {{mid}}
@@ -69,11 +72,11 @@
 ===Transitive verb===
 '''to pen''' ([[penned]] / [[pent]], penned / pent)
 
-#To write (an article, a book, etc.)
-#To enclose. The irregular past tense ''pent'' is primarily used in a figurative sense in the phrase "pent up".
+# To write (an article, a book, etc.)
+# To enclose. The irregular past tense ''pent'' is primarily used in a figurative sense in the phrase “pent up”.
 
 ====Translations====
-(''to write'')
+;to write
 {{top}}
 *French: [[écrire]]
 *Italian: [[scrivere]]
@@ -82,10 +85,10 @@
 *Russian: [[писать]] / [[написать]] (pisát’ / napisát’)
 {{bottom}}
 
-
 ----
 
 ==Dutch==
+
 ===Pronunciation===
 *[[w:IPA|IPA]]: /pεn/
 *[[w:SAMPA|SAMPA]]: /pEn/
@@ -93,15 +96,16 @@
 ===Noun===
 '''pen''' ''m''
 
-#pen (''writing utensil'')
+# pen {{italbrac|writing utensil}}
 
 ----
+
 ==Norwegian==
 
 ===Adjective===
 '''pen'''
 
-#beautiful
+# [[beautiful]]
 
 [[Category:1000 English basic words]]
 
