--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -21,7 +21,7 @@
 *Italian: [[conte]]
 *[[Lithuanian]]: [[grafas]] {{m}}
 {{mid}}
-*Polish: [[hrabina]] {{f}}
+*Polish: [[hrabia]] {{m}}
 *Portuguese: [[conde]] {{m}}
 *Romanian: [[conte]] {{m}}
 *Russian: [[граф]]
@@ -46,6 +46,7 @@
 *Finnish: [[lähtölaskenta]]
 *Polish: [[odliczanie]] {{n}}
 {{mid}}
+*Polish: [[odliczanie]] {{n}}
 *Romanian: [[numărătoare]] {{f}}
 *Russian: [[отсчёт]]
 *Slovene: [[odštevanje]] {{n}}
@@ -58,11 +59,7 @@
 
 =====Translations to be categorized=====
 {{checktrans}}
-{{top}}
-*{{ttbc|Polish}}: [[hrabia]] {{m}}
-{{mid}}
 *{{ttbc|Telugu}}: [[లెక్క]] (lekka), [[లెక్కింపు]] (lekkiMpu)
-{{bottom}}
 
 ===Verb===
 {{en-verb}}
